# cppnotes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
cppnotes/: CMakeLists.txt  cppnotes.cpp  executor.hpp  gui.cpp  gui.hpp  models.hpp  notemanager.cpp  notemanager.hpp
